--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,19 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.playerCard{
+  background-color:cornflowerblue;
+  color:burlywood;
+  margin: 20px;
+}
+
+.playerCard img{
+  width: 100px;
+  height: 100px;
+}
+
+.playerCard button{
+  margin: 10px;
+}
